# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "hare"
version = "0.0.0"
edition = "2021"
publish = ["depot"]
rust-version = "1.74"
include = ["**/*.rs"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
axum = "0.6.18"
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde"] }
deadpool = "0.9.5"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
lapin = "2.2.1"
prost = "0.11.9"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
thiserror = "1.0.43"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
url = { version = "2.4.0", features = ["serde"] }
uuid = { version = "1.4.0", features = ["fast-rng", "serde", "v4"] }
